CS152/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> arith_expr
Rule 2     arith_expr -> arith_expr ADD_OP term
Rule 3     arith_expr -> term
Rule 4     term -> term MULT_OP power
Rule 5     term -> power
Rule 6     power -> factor EXP power
Rule 7     power -> factor
Rule 8     factor -> LPAREN arith_expr RPAREN
Rule 9     factor -> FLOAT
Rule 10    factor -> INT

Terminals, with rules where they appear

ADD_OP               : 2
EXP                  : 6
FLOAT                : 9
INT                  : 10
LPAREN               : 8
MULT_OP              : 4
RPAREN               : 8
error                : 

Nonterminals, with rules where they appear

arith_expr           : 1 2 8
command              : 0
factor               : 6 7
power                : 4 5 6
term                 : 2 3 4

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . arith_expr
    (2) arith_expr -> . arith_expr ADD_OP term
    (3) arith_expr -> . term
    (4) term -> . term MULT_OP power
    (5) term -> . power
    (6) power -> . factor EXP power
    (7) power -> . factor
    (8) factor -> . LPAREN arith_expr RPAREN
    (9) factor -> . FLOAT
    (10) factor -> . INT

    LPAREN          shift and go to state 1
    FLOAT           shift and go to state 5
    INT             shift and go to state 7

    arith_expr                     shift and go to state 2
    term                           shift and go to state 4
    factor                         shift and go to state 8
    power                          shift and go to state 3
    command                        shift and go to state 6

state 1

    (8) factor -> LPAREN . arith_expr RPAREN
    (2) arith_expr -> . arith_expr ADD_OP term
    (3) arith_expr -> . term
    (4) term -> . term MULT_OP power
    (5) term -> . power
    (6) power -> . factor EXP power
    (7) power -> . factor
    (8) factor -> . LPAREN arith_expr RPAREN
    (9) factor -> . FLOAT
    (10) factor -> . INT

    LPAREN          shift and go to state 1
    FLOAT           shift and go to state 5
    INT             shift and go to state 7

    arith_expr                     shift and go to state 9
    factor                         shift and go to state 8
    power                          shift and go to state 3
    term                           shift and go to state 4

state 2

    (1) command -> arith_expr .
    (2) arith_expr -> arith_expr . ADD_OP term

    $end            reduce using rule 1 (command -> arith_expr .)
    ADD_OP          shift and go to state 10


state 3

    (5) term -> power .

    MULT_OP         reduce using rule 5 (term -> power .)
    RPAREN          reduce using rule 5 (term -> power .)
    ADD_OP          reduce using rule 5 (term -> power .)
    $end            reduce using rule 5 (term -> power .)


state 4

    (3) arith_expr -> term .
    (4) term -> term . MULT_OP power

    RPAREN          reduce using rule 3 (arith_expr -> term .)
    ADD_OP          reduce using rule 3 (arith_expr -> term .)
    $end            reduce using rule 3 (arith_expr -> term .)
    MULT_OP         shift and go to state 11


state 5

    (9) factor -> FLOAT .

    EXP             reduce using rule 9 (factor -> FLOAT .)
    MULT_OP         reduce using rule 9 (factor -> FLOAT .)
    RPAREN          reduce using rule 9 (factor -> FLOAT .)
    ADD_OP          reduce using rule 9 (factor -> FLOAT .)
    $end            reduce using rule 9 (factor -> FLOAT .)


state 6

    (0) S' -> command .



state 7

    (10) factor -> INT .

    EXP             reduce using rule 10 (factor -> INT .)
    MULT_OP         reduce using rule 10 (factor -> INT .)
    RPAREN          reduce using rule 10 (factor -> INT .)
    ADD_OP          reduce using rule 10 (factor -> INT .)
    $end            reduce using rule 10 (factor -> INT .)


state 8

    (6) power -> factor . EXP power
    (7) power -> factor .

    EXP             shift and go to state 12
    MULT_OP         reduce using rule 7 (power -> factor .)
    ADD_OP          reduce using rule 7 (power -> factor .)
    $end            reduce using rule 7 (power -> factor .)
    RPAREN          reduce using rule 7 (power -> factor .)


state 9

    (8) factor -> LPAREN arith_expr . RPAREN
    (2) arith_expr -> arith_expr . ADD_OP term

    RPAREN          shift and go to state 13
    ADD_OP          shift and go to state 10


state 10

    (2) arith_expr -> arith_expr ADD_OP . term
    (4) term -> . term MULT_OP power
    (5) term -> . power
    (6) power -> . factor EXP power
    (7) power -> . factor
    (8) factor -> . LPAREN arith_expr RPAREN
    (9) factor -> . FLOAT
    (10) factor -> . INT

    LPAREN          shift and go to state 1
    FLOAT           shift and go to state 5
    INT             shift and go to state 7

    factor                         shift and go to state 8
    power                          shift and go to state 3
    term                           shift and go to state 14

state 11

    (4) term -> term MULT_OP . power
    (6) power -> . factor EXP power
    (7) power -> . factor
    (8) factor -> . LPAREN arith_expr RPAREN
    (9) factor -> . FLOAT
    (10) factor -> . INT

    LPAREN          shift and go to state 1
    FLOAT           shift and go to state 5
    INT             shift and go to state 7

    power                          shift and go to state 15
    factor                         shift and go to state 8

state 12

    (6) power -> factor EXP . power
    (6) power -> . factor EXP power
    (7) power -> . factor
    (8) factor -> . LPAREN arith_expr RPAREN
    (9) factor -> . FLOAT
    (10) factor -> . INT

    LPAREN          shift and go to state 1
    FLOAT           shift and go to state 5
    INT             shift and go to state 7

    power                          shift and go to state 16
    factor                         shift and go to state 8

state 13

    (8) factor -> LPAREN arith_expr RPAREN .

    EXP             reduce using rule 8 (factor -> LPAREN arith_expr RPAREN .)
    MULT_OP         reduce using rule 8 (factor -> LPAREN arith_expr RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN arith_expr RPAREN .)
    ADD_OP          reduce using rule 8 (factor -> LPAREN arith_expr RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN arith_expr RPAREN .)


state 14

    (2) arith_expr -> arith_expr ADD_OP term .
    (4) term -> term . MULT_OP power

    RPAREN          reduce using rule 2 (arith_expr -> arith_expr ADD_OP term .)
    ADD_OP          reduce using rule 2 (arith_expr -> arith_expr ADD_OP term .)
    $end            reduce using rule 2 (arith_expr -> arith_expr ADD_OP term .)
    MULT_OP         shift and go to state 11


state 15

    (4) term -> term MULT_OP power .

    MULT_OP         reduce using rule 4 (term -> term MULT_OP power .)
    RPAREN          reduce using rule 4 (term -> term MULT_OP power .)
    ADD_OP          reduce using rule 4 (term -> term MULT_OP power .)
    $end            reduce using rule 4 (term -> term MULT_OP power .)


state 16

    (6) power -> factor EXP power .

    MULT_OP         reduce using rule 6 (power -> factor EXP power .)
    ADD_OP          reduce using rule 6 (power -> factor EXP power .)
    $end            reduce using rule 6 (power -> factor EXP power .)
    RPAREN          reduce using rule 6 (power -> factor EXP power .)

